tests/vendor/invalid/syntax/missing_for_header_clause.c
//tags: simple, loop
int main() {
    for (int i = 0;)
        ;
    return 0;
}